Помещены заглушки на место специальных навыков юнитов, изменен интерфейс IHaveSpecialAbility, Добавлены перечисление доступных фич, структура параметров фич, добавлен словарь фич с параметрами, начата реализация декоратора. Реализованы танцы с рефлексией

--- a/StackGame/StackGame.csproj
+++ b/StackGame/StackGame.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Units\Improvments\HorseUnitImprovment.cs" />
     <Compile Include="Units\Improvments\ShieldUnitImprovment.cs" />
     <Compile Include="Units\Improvments\SpearUnitImprovment.cs" />
-    <Compile Include="Units\Improvments\UnitImprove.cs" />
+    <Compile Include="Units\Improvments\UnitToBeImproved.cs" />
+    <Compile Include="UnitImprovmentStats.cs" />
+    <Compile Include="UnitImprovmentTypes.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Units\" />
