--- a/StackGame/StackGame.csproj
+++ b/StackGame/StackGame.csproj
@@ -30,6 +30,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="GulyayGorod">
+      <HintPath>..\GulyayGorod.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
