--- a/StackGame/StackGame.csproj
+++ b/StackGame/StackGame.csproj
@@ -37,7 +37,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitsConfiguration.cs" />
     <Compile Include="Units\Creators\ArcherUnitCreator.cs" />
     <Compile Include="Units\Models\ArcherUnit.cs" />
     <Compile Include="Units\Models\ClericUnit.cs" />
@@ -65,8 +64,6 @@
     <Compile Include="Units\Improvments\ShieldUnitImprovment.cs" />
     <Compile Include="Units\Improvments\SpearUnitImprovment.cs" />
     <Compile Include="Units\Improvments\UnitToBeImproved.cs" />
-    <Compile Include="UnitImprovmentStats.cs" />
-    <Compile Include="UnitImprovmentTypes.cs" />
     <Compile Include="Strategy\IStrategy.cs" />
     <Compile Include="Strategy\OneVSOne.cs" />
     <Compile Include="Strategy\NVSN.cs" />
@@ -74,6 +71,18 @@
     <Compile Include="Game\FirstStageOpponents.cs" />
     <Compile Include="Game\SpecialAbilityContainer.cs" />
     <Compile Include="Units\UnitsFactoryMethod.cs" />
+    <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Commands\CommandManager.cs" />
+    <Compile Include="Configs\UnitImprovmentStats.cs" />
+    <Compile Include="Configs\UnitImprovmentTypes.cs" />
+    <Compile Include="Configs\UnitsConfiguration.cs" />
+    <Compile Include="Configs\Randomizer.cs" />
+    <Compile Include="Commands\HitCommand.cs" />
+    <Compile Include="Commands\HealCommand.cs" />
+    <Compile Include="Commands\CloneCommand.cs" />
+    <Compile Include="Commands\ClearBattleFieldCommand.cs" />
+    <Compile Include="Commands\ImproveCommand.cs" />
+    <Compile Include="Commands\EndOfMovementCommand.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Units\" />
@@ -84,6 +93,8 @@
     <Folder Include="Units\Abilities\" />
     <Folder Include="Units\Improvments\" />
     <Folder Include="Strategy\" />
+    <Folder Include="Commands\" />
+    <Folder Include="Configs\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
